# beep

./: .gitignore  CREDITS.md  DEVELOPMENT.md  Doxyfile.in  GNUmakefile  INSTALL.md  Makefile.am  NEWS.md  PACKAGING.md  README.md  beep-driver-console.c  beep-driver-evdev.c  beep-driver.h  beep-event-loop.c  beep-event-loop.h  beep-library.c  beep-library.h  beep-log.c  beep-log.h  beep-main.c  beep-types.h  beep.1.in  configure.ac  conftest-program.c  issue-6-benchmark.c  testbuild-all
.github/workflows/: beep-build.yml  codeql.yml
contrib/: Makefile-files  status-beeps
contrib/morse/: Makefile-files
m4/: Makefile-files  sb-prog-doxygen.m4  sb-prog.m4  sb-summary.m4
tests/: Makefile-files  run-tests.in
